--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Look mama,I am using github.</h2>
     <h5>ok i agree with you.</h5>
     <p>Let's go for a party.</p>
+    <img src="flag.jpeg" alt="">
 </body>
 </html>
