--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <img src="flag.jpeg" alt="">
     <p>Talking from the second branch</p>
     <p>This line added in my second branch</p>
+    <p>added more code in the second branch</p>
 </body>
 </html>
