--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h5>ok i agree with you.</h5>
     <p>Let's go for a party.</p>
     <img src="flag.jpeg" alt="">
-    <p>Talking from the second branch</p>
-    <p>This line added in my second branch</p>
+    <p>Talking from the updated again branch</p>
+    <p>This line added in my another branch</p>
     <p>added more code in the second branch</p>
 </body>
 </html>
